.jjconflict-base-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__alternative_patterns.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "pub fn main(xs) {\n  case xs {\n    1 | 2 -> 0\n    _ -> 1\n  }\n}\n"
---
let
  main = xs: if xs == 1 then 0 else if xs == 2 then 0 else 1;
in
{ inherit main; }
