.jjconflict-base-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__rebound_var.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "pub fn main() {\n  let x = False\n  let x = True\n  case x {\n    _ if x -> 1\n    _ -> 0\n  }\n}\n"
---
let
  main = { }: let x = false; x'1 = true; in if x'1 then 1 else 0;
in
{ inherit main; }
